fix footer on mobile layout

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ a {
 
     footer {
         font-size: 8pt;
-        bottom: 0.5em;
     }
 }
 
